<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/rover_input"/>
        <Button android:id="@+id/rover_input_load" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rover_input_load"/>
    </LinearLayout>
    <EditText
            android:id="@+id/rover_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="0px"
            android:singleLine="false"
            android:gravity="top|left"
            android:text="@string/rover_input_default"/>

    <Button android:id="@+id/rover_run" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rover_run"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rover_output"/>
    <EditText
            android:id="@+id/rover_output"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="0px"
            android:singleLine="false"
            android:gravity="top|left"/>


</LinearLayout>

